# MAVSDK

./: README.md
GET_POSE/: CMakeLists.txt  README.md  main.cpp
pixhawrk/: CMakeLists.txt  package.xml
pixhawrk/src/: control.cpp
takeoff_and_land/: CMakeLists.txt  package.xml
takeoff_and_land/src/: GPS.cpp
